chapter-1/0-connectivity-link.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kuadrant-system
