chapter-1/5-maas-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maas-postgres
  namespace: redhat-ods-applications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maas-postgres
  template:
    metadata:
      labels:
        app: maas-postgres
    spec:
      containers:
      - name: postgres
        image: registry.redhat.io/rhel9/postgresql-15:latest
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: maas-postgres
  namespace: redhat-ods-applications
spec:
  selector:
    app: maas-postgres
  ports:
  - port: 5432
    targetPort: 5432
