chapter-1/4-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: openshift-ai-inference
  namespace: openshift-ingress
  annotations:
    router.openshift.io/service-ca-certificate: "true"
spec:
  port:
    targetPort: 443
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: maas-default-gateway-$GW_CLASS
    weight: 100
